# parcel

./: Cargo.toml  README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: bench.yml  publish.yml  test.yml
benches/: binary_parsing.rs  text_parsing.rs  text_parsing_bench.rs
src/: lib.rs
src/formatter/: mod.rs
src/formatter/character/: mod.rs
src/parsers/: mod.rs
src/parsers/byte/: mod.rs
src/parsers/character/: mod.rs
src/prelude/v1/: mod.rs
src/tests/: binary_parsing.rs  mod.rs  textual_parsing.rs
src/util/: formatter.rs
