[package]
name = "parcel"
version = "1.6.0"
authors = ["Nate Catelli <ncatelli@packetfire.org>"]
edition = "2018"
description = "A toy parser combinator library for rust."
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/ncatelli/parcel/"
keywords = ["parser", "parser combinators"]

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "text_parsing"
harness = false

[[bench]]
name = "binary_parsing"
harness = false

[dependencies]
